traversal.snake.Snake.scala.error
Compilation error:
Snake:17: error: Boolean.type does not take parameters
def verifFin(dir: Direction) = Boolean {
                                       ^